Add unversioned files

--- a/composer.json
+++ b/composer.json
@@ -8,12 +8,12 @@
         "sdk",
         "api"
     ],
-    "homepage": "http://swagger.io",
+    "homepage": "http://tuningfiles.com",
     "license": "proprietary",
     "authors": [
         {
-            "name": "Swagger and contributors",
-            "homepage": "https://github.com/swagger-api/swagger-codegen"
+            "name": "Sedox Performance AS",
+            "homepage": "https://www.sedox-performance.com"
         }
     ],
     "require": {
